@@ -1,5 +1,14 @@
 2012-11-08  Filip Pizlo  <fpizlo@apple.com>
 
+        It should be possible to JIT compile get_by_vals and put_by_vals even if the DFG is disabled.
+
+        Reviewed by Oliver Hunt.
+
+        * jit/JITInlineMethods.h:
+        (JSC::JIT::chooseArrayMode):
+
+2012-11-08  Filip Pizlo  <fpizlo@apple.com>
+
         op_call should have LLInt call link info even if the DFG is disabled
         https://bugs.webkit.org/show_bug.cgi?id=101672
 
